--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "scripts": {
     "start": "webpack-dev-server --mode development",
     "lint": "eslint './src/**/*.js*'",
-    "deploy": "webpack -p && gh-pages -d dist"
+    "deploy": "webpack -p && gh-pages -d dist",
+    "build": "webpack -p"
   }
 }
