--- a/package.json
+++ b/package.json
@@ -27,8 +27,12 @@
     "webpack-dev-server": "^3.1.11"
   },
   "dependencies": {
-    "react": "16.2",
-    "react-dom": "16.2"
+    "bootstrap": "^4.5.3",
+    "react": "16.8",
+    "react-bootstrap": "^1.4.0",
+    "react-dom": "16.8",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0"
   },
   "scripts": {
     "start": "webpack-dev-server --mode development",
